[package]
name = "nube"
version = "0.0.1"
authors = ["David Núñez <david@nucypher.com>", "Bogdan Opanchuk <bogdan@opanchuk.net>"]
edition = "2018"
license = "GPL-3.0-only"
description = "Implementation of a pairing-based proxy reencryption algorithm with distributed key generaton"
repository = "https://github.com/nucypher/nube"
readme = "README.md"
categories = ["cryptography", "no-std"]


[dependencies]
bls12_381 = "0.6"
rand_core = { version = "0.6", features = ["getrandom"] }
ff = "0.11"
sha3 = "0.9"
